syntax = "proto3";
package grpc_plugin;
option go_package = "github.com/hashicorp/go-plugin/examples/my_test_grpc_plugin";

import "google/protobuf/descriptor.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

extend google.protobuf.ServiceOptions {
  optional string plugin_name = 51235;
}

message Request{
  int32 field1 = 1;
  int64 field2 = 2;
  double field3 = 3;
  string field4 = 4;
  bytes field5 = 5;
  repeated string field6 = 6;
}

message Response {
  int32 code = 1;
  string msg = 2;
}

service MyTestGrpcPlugin{
  option (plugin_name) = "my_plugin_1";
  rpc run(Request) returns (Response);
}

service MyTestGrpcPluginForAnother{
  option (plugin_name) = "my_plugin_2";
  rpc ProcessData(Request) returns (Response);
}
