// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";
package proto;
option go_package = "./proto";

message Read {
  message Request {}
  message ResponseChunk {
    bytes read_bytes = 1;
  }
}

message Write {
  message RequestChunk {
    bytes bytes_to_write = 1;
  }
  message Response {}
}

message Configure {
  message Request {
    string path = 1;
    int64 chunk_size = 2;
  }
  message Response {}
}

service StreamerService {
  rpc Configure(Configure.Request) returns (Configure.Response);
  rpc Read(Read.Request) returns (stream Read.ResponseChunk);
  rpc Write(stream Write.RequestChunk) returns (Write.Response);
}
